<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Epi - Collecte</string>
    <string name="standard_dialog_ok">OK</string>

    <string name="sms_timeout_dialog_title">Pas de réponse du serveur</string>
    <string name="sms_timeout_dialog_body">L\'application EPI n\'a pas reçue de réponse du serveur.\nLa réponse peut parfois prendre du temps avant d\'arriver.\nVérifiez vos SMS pendant 5mn puis appelez la Hotline.</string>

    <string name="resume_report_title">Continuer le rapport ?</string>
    <string name="resume_report_body">Voulez-vous continuer avec les données du rapport %1$s déjà renseignées ?</string>
    <string name="resume_report_ok_label">Continuer rapport</string>
    <string name="resume_report_cancel_label">Reprendre à zéro</string>

    <string name="server_sms_received_title">Réponse du serveur</string>

    <string name="sending_sms_report_title">Envoi en cours</string>
    <string name="sending_sms_report_body">Votre demande a été envoyée par SMS.\nVeuillez attendre la réponse du serveur pour vérifier qu\'il a bien été enregistré.\nVous recevrez alors un numéro de reçu.</string>

    <string name="required_connexion_title">Connexion requise</string>
    <string name="required_connexion_body">Cette action nécessite une connexion à Internet. Activez les données mobiles ou le WiFi puis réessayez.</string>
    <string name="required_connexion_cancel">Annuler</string>
    <string name="required_connexion_retry">Réessayer</string>

    <!-- Preferences -->
    <string name="pref_server_num">Numéro Serveur</string>
    <string name="pref_server_num_summary">Numéro flotte du serveur </string>
    <string name="pref_username">Identifiant</string>
    <string name="pref_username_summary">Identifiant d\'un l\'agent</string>
    <!-- Standard Errors -->
    <string name="error_dialog_title">Erreur !</string>
    <string name="error_dialog_button_text">Fermer et corriger</string>
    <string name="error_field_empty">Champs requis</string>
    <string name="error_field_min_chars">%s caractères minimum</string>
    <string name="error_field_nopasswd">pas d\'espace, %s caractères mini.</string>
    <string name="error_field_positive_integer">Entier positif requis</string>
    <string name="error_sms_not_sent_title">Erreur d\'envoi du SMS</string>
    <string name="error_sms_not_sent_body">Le SMS n\'a pas pu être envoyé correctement. Vérifiez que vous avez du réseau et du crédit puis réessayez.\n%1$s</string>
    <string name="app_name_long">Menu Principal</string>
    <string name="suivi_label">Suivi</string>
    <string name="register_label">Enregistrement</string>
    <string name="gestion_label">gestion de stock</string>

    <!-- menu items -->
    <string name="app_version">Version</string>
    <string name="menu_settings">Paramètres</string>
    <string name="news">Ressources (en ligne)</string>
    <string name="menu_about">À propos</string>
    <string name="menu_change_password">Changer mot de passe</string>
    <string name="rest_database">Suppression de la données.</string>
    <string name="rest_confermed">"Êtes-vous certain?"</string>
    <string name="advanced">Paramètres avancés</string>
    <string name="summary_reset_db">Appui %d fois pour supprimer la base de données.</string>
    <string name="msgBegin">Ajouter un article pour commencer</string>
    <string name="importOk" formatted="false">%s a été importée avec succès depuis \n %s</string>
    <string name="exportOk" formatted="false">%s a été exportée avec succès sur \n %s</string>
    <string name="delDB">%s a été supprimée avec succès.</string>
    <string name="pref_pass_word">Mot de passe</string>
    <string name="pref_pass_word_summary">Mot de passe du compte d\'utilisateur</string>
    <string name="locality">Localité</string>
    <string name="healthEntity">Air de santé</string>
    <string name="summary_health_center">Air de santé</string>

    <!-- Password Dialog -->
    <string name="username">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="submit">Envoyer</string>
    <string name="cancel">Retour</string>
    <string name="password_dialog_title">Identification</string>
    <string name="password_dialog_text">Merci de renseigner vos identifiants EPI pour transmettre les données %1$s</string>

    <string name="notif_sms_sent">Rapport envoyé par SMS. Une réponse vous parviendra bientôt.</string>
    <string name="notif_sms_failed">Échec de l\'envoi du rapport par SMS. Veuillez réessayer dans quelques minutes.</string>
    <string name="version_button_default_label">Vérifier mises à jour</string>
    <string name="version_button_label">Version %1$s (vérifier mises à jour)</string>
    <string name="stock_label">Stock</string>
    <string name="title_activity_stock">Gestion de stock</string>
    <string name="title_activity_suivi">Formulaire de Suivi (mensuel)</string>
    <string name="title_activity_register">Formulaire d\'enregistrement</string>

    <string name="go_to_application_settings">Accéder aux informations de l\'appli.</string>
    <string name="pnso_get_permission_title">Demande d\'autorisation.</string>
    <string name="pnso_get_permission_body">L\'application EPI-droid a besoin d\'autorisations pour effectuer certaines actions (envoyer des SMS).
        \nAllez dans les informations de l\'appli, appuyez sur autorisations et activez les tous.</string>
</resources>
