<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <Preference android:title="@string/menu_settings"
        android:key="magic"
        android:summary=""/>
    <PreferenceCategory android:title="@string/app_name"
        android:key="snisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditTextPreference
            android:title="@string/pref_server_num"
            android:summary="@string/pref_server_num_summary"
            android:key="serverPhoneNumber"
            android:inputType="number"
            android:ems="10"
            android:defaultValue="76433890"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditTextPreference
            android:title="@string/pref_username"
            android:summary="@string/pref_username_summary"
            android:key="userName"
            android:inputType="number"
            android:ems="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditTextPreference
            android:title="@string/pref_pass_word"
            android:summary="@string/pref_pass_word_summary"
            android:key="passWord"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/locality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ListPreference
            android:title="Région"
            android:summary="Région sanitaire"
            android:key="entities"
            android:defaultValue="#00FFFF"
            android:entries="@array/regions_codes"
            android:entryValues="@array/regions"
            android:icon="@mipmap/ic_launcher"
            android:dialogIcon="@mipmap/ic_launcher" />
        <ListPreference
            android:title="District Sanitaire"
            android:summary="District Sanitaire"
            android:key="healfDistrict"
            android:defaultValue="#00FFFF"
            android:entries="@array/districts_codes"
            android:entryValues="@array/districts"
            android:icon="@mipmap/ic_launcher"
            android:dialogIcon="@mipmap/ic_launcher" />
        <ListPreference
            android:title="@string/healthEntity"
            android:summary="@string/summary_health_center"
            android:key="healfCenter"
            android:defaultValue="#00FFFF"
            android:entries="@array/health_center_codes"
            android:entryValues="@array/health_center"
            android:icon="@mipmap/ic_launcher"
            android:dialogIcon="@mipmap/ic_launcher"  />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Preference android:title="@string/rest_database"
            android:key="restDB"
            android:summary="@string/summary_reset_db"/>
    </PreferenceCategory>
</PreferenceScreen>
