<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ui="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".EPIHome">


    <LinearLayout
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appLongNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:linksClickable="false"
            android:text="@string/app_name_long"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boutonenregistrer"
            android:text="@string/register_label" />

        <Button
            android:id="@+id/suiviBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boutonenregistrer"
            android:text="@string/suivi_label" />

        <Button
            android:id="@+id/stockBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boutonenregistrer"
            android:text="@string/stock_label" />

    </LinearLayout>

</ScrollView>